--- a/frontend/src/app/copyright/copyright.component.html
+++ b/frontend/src/app/copyright/copyright.component.html
@@ -15,7 +15,9 @@
             </script>
             All rights reserved | This template is made with
             <i class="fa fa-heart" aria-hidden="true"></i> by
-            <a href="https://colorlib.com" target="_blank">Colorlib</a>
+            <a href="https://github.com/williamkoller" target="_blank"
+              >William Koller</a
+            >
             <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
           </div>
           <div class="logos ml-sm-auto">
