feat: add Two-Way-Databinding (ngModel) and Event Binding (input)

--- a/frontend/src/app/newsletter/newsletter.component.html
+++ b/frontend/src/app/newsletter/newsletter.component.html
@@ -1,37 +1,65 @@
 <!-- Newsletter -->
 
 <div class="newsletter">
-  <div class="container">
-    <div class="row">
-      <div class="col">
-        <div
-          class="newsletter_container d-flex flex-lg-row flex-column align-items-lg-center align-items-center justify-content-lg-start justify-content-center"
-        >
-          <div class="newsletter_title_container">
-            <div class="newsletter_icon">
-              <img src="images/send.png" alt="" />
-            </div>
-            <div class="newsletter_title">Sign up for Newsletter</div>
-            <div class="newsletter_text">
-              <p>...and receive %20 coupon for first shopping.</p>
-            </div>
-          </div>
-          <div class="newsletter_content clearfix">
-            <form action="#" class="newsletter_form">
-              <input
-                type="email"
-                class="newsletter_input"
-                required="required"
-                placeholder="Enter your email address"
-              />
-              <button class="newsletter_button">Subscribe</button>
-            </form>
-            <div class="newsletter_unsubscribe_link">
-              <a href="#">unsubscribe</a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
+	<div class="container">
+		<div class="row">
+			<div class="col">
+				<div
+					class="newsletter_container d-flex flex-lg-row flex-column align-items-lg-center align-items-center justify-content-lg-start justify-content-center"
+				>
+					<div class="newsletter_title_container">
+						<div class="newsletter_icon">
+							<img src="images/send.png" alt="" />
+						</div>
+						<div class="newsletter_title">
+							Sign up for Newsletter
+						</div>
+						<div class="newsletter_text">
+							<p>{{ textNewsLetter }}</p>
+						</div>
+						<div class="newsletter_text">
+							<p>{{ email }}</p>
+						</div>
+					</div>
+					<div class="newsletter_content clearfix">
+						<!-- <form action="#" class="newsletter_form"> -->
+						<!--
+							Event
+							Bingings
+              -->
+						<input
+							type="email"
+							class="newsletter_input"
+							required="required"
+							placeholder="Enter your email address"
+							(input)="onEmailEnter($event)"
+						/>
+						<!--
+							"Tow-Way-Databindings"
+							-->
+						<input
+							type="email"
+							class="newsletter_input"
+							required="required"
+							placeholder="Enter your email address"
+							[(ngModel)]="email"
+						/>
+
+						<button
+							class="newsletter_button"
+							[disabled]="!permiteNewsLetter"
+							type="button"
+							(click)="onSubmitNewsLetter()"
+						>
+							Subscribe
+						</button>
+						<!-- </form> -->
+						<div class="newsletter_unsubscribe_link">
+							<a href="#">unsubscribe</a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 </div>
