feat: add connect api

--- a/frontend/src/app/brands/brands.component.html
+++ b/frontend/src/app/brands/brands.component.html
@@ -1,80 +1,104 @@
 <!-- Brands -->
 
 <div class="brands">
-  <div class="container">
-    <div class="row">
-      <div class="col">
-        <div class="brands_slider_container">
-          <!-- Brands Slider -->
+	<div class="container">
+		<div class="row">
+			<div class="col">
+				<div class="brands_slider_container">
+					<!-- Brands Slider -->
 
-          <div class="owl-carousel owl-theme brands_slider">
-            <div class="owl-item">
-              <div
-                class="brands_item d-flex flex-column justify-content-center"
-              >
-                <img src="images/brands_1.jpg" alt="" />
-              </div>
-            </div>
-            <div class="owl-item">
-              <div
-                class="brands_item d-flex flex-column justify-content-center"
-              >
-                <img src="images/brands_2.jpg" alt="" />
-              </div>
-            </div>
-            <div class="owl-item">
-              <div
-                class="brands_item d-flex flex-column justify-content-center"
-              >
-                <img src="images/brands_3.jpg" alt="" />
-              </div>
-            </div>
-            <div class="owl-item">
-              <div
-                class="brands_item d-flex flex-column justify-content-center"
-              >
-                <img src="images/brands_4.jpg" alt="" />
-              </div>
-            </div>
-            <div class="owl-item">
-              <div
-                class="brands_item d-flex flex-column justify-content-center"
-              >
-                <img src="images/brands_5.jpg" alt="" />
-              </div>
-            </div>
-            <div class="owl-item">
-              <div
-                class="brands_item d-flex flex-column justify-content-center"
-              >
-                <img src="images/brands_6.jpg" alt="" />
-              </div>
-            </div>
-            <div class="owl-item">
-              <div
-                class="brands_item d-flex flex-column justify-content-center"
-              >
-                <img src="images/brands_7.jpg" alt="" />
-              </div>
-            </div>
-            <div class="owl-item">
-              <div
-                class="brands_item d-flex flex-column justify-content-center"
-              >
-                <img src="images/brands_8.jpg" alt="" />
-              </div>
-            </div>
-          </div>
+					<div class="owl-carousel owl-theme brands_slider">
+						<div class="owl-item">
+							<div
+								class="brands_item d-flex flex-column justify-content-center"
+							>
+								<img
+									src="../assets/images/brands_1.jpg"
+									alt=""
+								/>
+							</div>
+						</div>
+						<div class="owl-item">
+							<div
+								class="brands_item d-flex flex-column justify-content-center"
+							>
+								<img
+									src="../assets/images/brands_2.jpg"
+									alt=""
+								/>
+							</div>
+						</div>
+						<div class="owl-item">
+							<div
+								class="brands_item d-flex flex-column justify-content-center"
+							>
+								<img
+									src="../assets/images/brands_3.jpg"
+									alt=""
+								/>
+							</div>
+						</div>
+						<div class="owl-item">
+							<div
+								class="brands_item d-flex flex-column justify-content-center"
+							>
+								<img
+									src="../assets/images/brands_4.jpg"
+									alt=""
+								/>
+							</div>
+						</div>
+						<div class="owl-item">
+							<div
+								class="brands_item d-flex flex-column justify-content-center"
+							>
+								<img
+									src="../assets/images/brands_5.jpg"
+									alt=""
+								/>
+							</div>
+						</div>
+						<div class="owl-item">
+							<div
+								class="brands_item d-flex flex-column justify-content-center"
+							>
+								<img
+									src="../assets/images/brands_6.jpg"
+									alt=""
+								/>
+							</div>
+						</div>
+						<div class="owl-item">
+							<div
+								class="brands_item d-flex flex-column justify-content-center"
+							>
+								<img
+									src="../assets/images/brands_7.jpg"
+									alt=""
+								/>
+							</div>
+						</div>
+						<div class="owl-item">
+							<div
+								class="brands_item d-flex flex-column justify-content-center"
+							>
+								<img
+									src="../assets/images/brands_8.jpg"
+									alt=""
+								/>
+							</div>
+						</div>
+					</div>
 
-          <!-- Brands Slider Navigation -->
-          <div class="brands_nav brands_prev">
-            <i class="fas fa-chevron-left"></i>
-          </div>
-          <div class="brands_nav brands_next">
-            <i class="fas fa-chevron-right"></i>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
+					<!-- Brands Slider Navigation -->
+					<div class="brands_nav brands_prev">
+						<i class="fas fa-chevron-left"></i>
+					</div>
+					<div class="brands_nav brands_next">
+						<i class="fas fa-chevron-right"></i>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 </div>
