--- a/frontend/src/app/newsletter/newsletter.component.html
+++ b/frontend/src/app/newsletter/newsletter.component.html
@@ -9,7 +9,7 @@
 				>
 					<div class="newsletter_title_container">
 						<div class="newsletter_icon">
-							<img src="images/send.png" alt="" />
+							<img src="../assets/images/send.png" alt="" />
 						</div>
 						<!-- <div
 							class="newsletter_title"
