--- a/frontend/src/app/shop/shop-content/shop-content.component.html
+++ b/frontend/src/app/shop/shop-content/shop-content.component.html
@@ -41,34 +41,10 @@
 		<div class="product_grid_border"></div>
 
 		<!-- Product Item -->
-		<div class="product_item is_new" *ngFor="let produto of produtos">
-			<div class="product_border"></div>
-			<div
-				class="product_image d-flex flex-column align-items-center justify-content-center"
-			>
-				<img
-					[attr.src]="
-						'http://localhost:3000/' + produto.imagem_produto
-					"
-					alt=""
-				/>
-			</div>
-			<div class="product_content">
-				<div class="product_price">
-					{{ produto.preco | currency: 'BRL' }}
-				</div>
-				<div class="product_name">
-					<div>
-						<a href="#" tabindex="0">{{ produto.nome }}</a>
-					</div>
-				</div>
-			</div>
-			<div class="product_fav"><i class="fas fa-heart"></i></div>
-			<ul class="product_marks">
-				<li class="product_mark product_discount">-25%</li>
-				<li class="product_mark product_new">new</li>
-			</ul>
-		</div>
+		<app-product-item
+			*ngFor="let produto of produtos"
+			[produto]="produto"
+		></app-product-item>
 	</div>
 
 	<!-- Shop Page Navigation -->
